--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -3,5 +3,5 @@
   --secondary-bg-color: #535353;
   --primary-color: #d1d0d0;
   --secondary-color: #FFF;
-  --highlight-color: #2196F3;
+  --highlight-color: #79C4FF;
 }
