--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -40,3 +40,11 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+button {
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  cursor: pointer;
+}
