manage filter and tab state using Redux

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -45,3 +45,8 @@ body {
   font: $font-l;
   color: var(--highlight-color);
 }
+
+.selected {
+  background: var(--highlight-color);
+  color:#FFF ;
+}
