fix styles and console errors

--- a/src/entities/Tabs/ui/Tabs.module.scss
+++ b/src/entities/Tabs/ui/Tabs.module.scss
@@ -1,5 +1,6 @@
 .tab__list {
   display: flex;
+  overflow: hidden;
   justify-content: space-between;
   border: 1px solid #DFE5EC;
   margin-bottom: 20px;
