--- a/src/shared/styles/themes/dark.scss
+++ b/src/shared/styles/themes/dark.scss
@@ -4,4 +4,7 @@
   --primary-color: #d1d0d0;
   --secondary-color: #FFF;
   --highlight-color: #79C4FF;
+  --hover-color: #3ca9fd;
+  --border-color: #636466;
+  --box-shadow-color: rgba(0, 0, 0, 0.2);
 }
