--- a/src/shared/styles/themes/normal.scss
+++ b/src/shared/styles/themes/normal.scss
@@ -4,4 +4,7 @@
   --primary-color: #4A4A4A;
   --secondary-color: #A0B0B9;
   --highlight-color: #2196F3;
+  --hover-color: #0388f5;
+  --border-color: #DFE5EC;
+  --box-shadow-color: rgba(110, 110, 112, 0.2);
 }
