--- a/src/widgets/MainContent/ui/MainContent.module.scss
+++ b/src/widgets/MainContent/ui/MainContent.module.scss
@@ -1,3 +1,6 @@
+@import 'shared/styles/themes/normal.scss';
+@import 'shared/styles/themes/dark.scss';
+
 .main {
   &__container {
     display: grid;
@@ -10,9 +13,11 @@
 }
 
 .filter {
+  background: var(--secondary-bg-color);
+  border-radius: 5px;
   padding: 20px;
   max-height: 250px;
-  box-shadow: 5px 7px 8px 1px rgba(110, 110, 112, 0.2);
+  box-shadow: 4px 3px 8px 1px var(--box-shadow-color);
 
   grid-area: filter;
   align-self: flex-start;
