--- a/src/entities/ticket/TicketList/ui/TicketList.module.scss
+++ b/src/entities/ticket/TicketList/ui/TicketList.module.scss
@@ -1,3 +1,6 @@
+@import 'shared/styles/themes/normal.scss';
+@import 'shared/styles/themes/dark.scss';
+
 .ticket {
   &__list {
     display: flex;
@@ -7,9 +10,11 @@
   &__item {
     display: flex;
     flex-direction: column;
+    background: var(--secondary-bg-color);
+    border-radius: 5px;
     gap: 20px;
     padding: 20px;
-    box-shadow: 5px 7px 8px 1px rgba(110, 110, 112, 0.2);
+    box-shadow: 4px 3px 8px 1px var(--box-shadow-color);
   }
 
   &__header {
