--- a/src/features/TabSelector/ui/TabSelector.module.scss
+++ b/src/features/TabSelector/ui/TabSelector.module.scss
@@ -1,26 +1,28 @@
+@import 'shared/styles/themes/normal.scss';
+@import 'shared/styles/themes/dark.scss';
+
 .tab {
   &__list {
+    background: var(--secondary-bg-color);
+    border-radius: 5px;
     display: flex;
     overflow: hidden;
     justify-content: space-between;
-    border: 1px solid #DFE5EC;
-    box-shadow: 5px 7px 8px 1px rgba(110, 110, 112, 0.2);
+    border: 1px solid var(--border-color);
+    box-shadow: 4px 3px 8px 1px var(--box-shadow-color);
   }
 
   &__item {
     width: 100%;
     text-align: center;
+
+    &_selected {
+      background: var(--highlight-color);
+      color:#FFF ;
+    }
   
     &:not(:last-child) {
-      border-right: 1px solid #DFE5EC;
+      border-right: 1px solid var(--border-color);
     }
-  }
-
-  &__btn {
-    text-transform: uppercase;
-    font-weight: 500;
-    padding: 15px 0;
-    width: 100%;
-    height: 100%;
   }
 }
